Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriObjObjectRetInteger.quorum
class Main
    action Main
        Yoda<Integer, Integer, Object> yoda
        Object y = yoda:useForce(66, 66)
        output "passed"
     end
end
