Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriObjectRetIntegerFail.quorum
class Main
    action Main
        Yoda<Integer, Integer, Object> yoda
        boolean y = yoda(66, 66, true)
     end
end
